[Fixes #68739494] Properly display ol/ul elements in truncated text
 - top level list-style-type is set to none on li's so we need to be more specific
   at the truncated text level when setting decimal/disc
 - also fixes an issue where truncated text li's in page lists inherited hover state
   from the page list view

--- a/app/assets/stylesheets/base/_truncated_text.scss
+++ b/app/assets/stylesheets/base/_truncated_text.scss
@@ -16,9 +16,9 @@
 
             i { font-style: italic; }
 
-            ul { list-style-type: disc; }
+            ul { li { list-style-type: disc; } }
 
-            ol { list-style-type: decimal; }
+            ol { li { list-style-type: decimal; } }
 
             ul, ol {
                 li {
@@ -26,6 +26,10 @@
                     margin-left: 40px;
                     border: none;
                     line-height: $summary-line-height;
+
+                    &:hover {
+                        background-color: inherit;
+                    }
                 }
             }
         }
